Changed List of products to product for ViewModel creating new products.

--- a/Eureka_Forbes/Views/ProductMaster/CreateProductMaster.cshtml
+++ b/Eureka_Forbes/Views/ProductMaster/CreateProductMaster.cshtml
@@ -382,7 +382,7 @@
 
         // Create JSON object
         let productData = {
-            product: [{ productName: productName }],
+            product: { productName: productName },
             ProductModels: [{ ModelName: productModelName }],
             productModelSteps: steps
         };
