Added GetAllProduct view, updated ProductwithSteps to a table view

--- a/Eureka_Forbes/Views/ProductMaster/CreateProductMaster.cshtml
+++ b/Eureka_Forbes/Views/ProductMaster/CreateProductMaster.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Eureka_Forbes.Models.ProductMaster
 @{
-    ViewData["Title"] = "CreateProductMaster";
+    ViewData["Title"] = "Create Product";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var stepsList = ViewBag.stepsList as List<Steps>;
 }
