--- a/Eureka_Forbes/Views/Shared/_Layout.cshtml
+++ b/Eureka_Forbes/Views/Shared/_Layout.cshtml
@@ -374,8 +374,8 @@
                                 <a class="has-arrow" href="javascript:void(0)" aria-expanded="false"><i class="nav-icon ti ti-settings"></i> <span class="nav-title">Masters</span></a>
                                 <ul aria-expanded="false">
                                     <li> <a href="@Url.Action("EmployeeMaster", "Supervisor")">Employee Master</a> </li>
-                                    <li> <a href="@Url.Action("CreateProductMaster", "ProductMaster")">Product Master</a> </li>
-                                    <li> <a href="@Url.Action("GetProductsWithModelsAndSteps", "ProductMaster")">Product Category / family</a> </li>
+                                    <li> <a href="@Url.Action("GetAllProduct", "ProductMaster")">Product Master</a> </li>
+                                    <li> <a href="javascript:;">Product Category / family</a> </li>
                                     <li> <a href="javascript:;">Product SubCategory</a> </li>
                                     <li> <a href="javascript:;">Workcenter Master</a> </li>
                                     <li> <a href="javascript:;">Shift Master</a> </li>
