Cleaned Code for extra models, ProductSteps Crud complete

--- a/Eureka_Forbes/Views/ProductMaster/CreateProductMaster.cshtml
+++ b/Eureka_Forbes/Views/ProductMaster/CreateProductMaster.cshtml
@@ -404,7 +404,7 @@
             productModelSteps: steps
         };
 
-        alert(JSON.stringify(productData)); // Use JSON.stringify to see the actual JSON structure
+       // alert(JSON.stringify(productData)); // Use JSON.stringify to see the actual JSON structure
 
         // Send JSON data to the server
         fetch('/ProductMaster/SaveProduct', {
