--- a/Eureka_Forbes/Views/ProductMaster/UpdateProductModel.cshtml
+++ b/Eureka_Forbes/Views/ProductMaster/UpdateProductModel.cshtml
@@ -156,7 +156,7 @@
             productModelSteps: steps
         };
 
-        alert(JSON.stringify(productData)); // Use JSON.stringify to see the actual JSON structure
+        //alert(JSON.stringify(productData)); // Use JSON.stringify to see the actual JSON structure
 
         // Send JSON data to the server
         fetch('/ProductMaster/UpdateProductModel', {
